# api/src/main/java/com/lealdidier/invoice/scan/rest/InterpretPost.java
@@ -3,16 +3,13 @@ package com.lealdidier.invoice.scan.rest;
 import com.lealdidier.invoice.scan.InvoiceRequest;
 import com.lealdidier.invoice.scan.InvoiceRequestJSONOutput;
 import com.lealdidier.invoice.scan.ScalarInvoiceRequest;
+import com.lealdidier.invoice.scan.SparkRequestInvoiceRequest;
 import com.lealdidier.io.Input;
-import com.lealdidier.io.JSONObjectRequestBodyOutput;
 import com.lealdidier.io.JSONObjectResponseBodyOutput;
-import com.lealdidier.io.Output;
-import org.json.JSONObject;
 import spark.Request;
 import spark.Response;
 
 import java.io.IOException;
-import java.util.UUID;
 
 public class InterpretPost  {
 
@@ -20,13 +17,10 @@ public class InterpretPost  {
 
     private final Input<String[]> regexs;
     private final Input<String> nonMatchingRegexMessageInput;
-    private final Output<InvoiceRequest> invoiceRequestOutput;
 
-    public InterpretPost(Input<String[]> regexs, Input<String> nonMatchingRegexMessageInput,
-                         Output<InvoiceRequest> invoiceRequestOutput) {
+    public InterpretPost(Input<String[]> regexs, Input<String> nonMatchingRegexMessageInput) {
         this.regexs = regexs;
         this.nonMatchingRegexMessageInput = nonMatchingRegexMessageInput;
-        this.invoiceRequestOutput = invoiceRequestOutput;
     }
 
     private boolean matches(String value) throws IOException {
@@ -49,14 +43,7 @@ public class InterpretPost  {
     }
 
     private void handleContents(String contents, Request request, Response response) throws IOException {
-        if (request.headers().contains(CALLBACK_URL_HEADER_NAME)) {
-
-        } else {
-            InvoiceRequest invoiceRequest = new ScalarInvoiceRequest(
-                    UUID.nameUUIDFromBytes(contents.getBytes()), contents);
-            invoiceRequestOutput.write(invoiceRequest);
-            response.status(202);
-            new JSONObjectRequestBodyOutput(new InvoiceRequestJSONOutput(invoiceRequest), response).write(new JSONObject());
-        }
+        InvoiceRequest invoiceRequest = new SparkRequestInvoiceRequest(CALLBACK_URL_HEADER_NAME, request);
+        invoiceRequest.process();
     }
 }
